--- a/static/css/base.css
+++ b/static/css/base.css
@@ -60,7 +60,7 @@ a:visited {
     width: 100%;
     height: 54px;
     background-color: white;
-    z-index: 2;
+    z-index: 3;
     top: 0;
 }
 .header__title {
